tests/fixtures/errors/undefined_var.chisa
let x = unknownVariable + 1
